--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
@@ -46,28 +48,44 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.7.0",
+    "faker": "^4.1.0",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "jest-supertest-matchers": "0.0.2",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "sqlite3": "^4.1.1",
     "style-loader": "^1.1.3",
     "supertest": "^4.0.2",
+    "typeorm-fixtures-cli": "^1.5.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@sentry/node": "^5.15.5",
     "bootstrap": "^4.4.1",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "i18next": "^19.4.3",
     "jquery": "^3.4.1",
     "koa": "^2.11.0",
+    "koa-404-handler": "0.0.2",
+    "koa-better-error-handler": "^3.0.5",
+    "koa-bodyparser": "^4.3.0",
+    "koa-flash-simple": "0.0.3",
+    "koa-generic-session": "^2.0.4",
+    "koa-logger": "^3.2.1",
+    "koa-methodoverride": "^2.0.0",
     "koa-pug": "^4.0.3",
     "koa-router": "^8.0.7",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.3.0",
+    "lodash": "^4.17.15",
+    "pg": "^8.0.3",
     "popper.js": "^1.16.1",
+    "typeorm": "^0.2.24",
     "webpack": "^4.41.5"
   }
 }
