feat: create task

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 plugins:
   - import
   - jest
+  - prettier
   # - babel
 
 parser: babel-eslint
@@ -8,6 +9,7 @@ parser: babel-eslint
 extends:
   - airbnb-base
   - plugin:jest/recommended
+  - plugin:prettier/recommended
 
 env:
   node: true
