--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "faker": "^4.1.0",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
