--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "jest-supertest-matchers": "0.0.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
@@ -68,6 +68,7 @@
   "dependencies": {
     "@sentry/node": "^5.15.5",
     "bootstrap": "^4.4.1",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "i18next": "^19.4.3",
