--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "dotenv": "^8.2.0",
     "i18next": "^19.4.3",
     "jquery": "^3.4.1",
+    "jquery-ujs": "^1.2.2",
     "koa": "^2.11.0",
     "koa-404-handler": "0.0.2",
     "koa-better-error-handler": "^3.0.5",
