--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "make start",
     "test": "jest",
-    "build": "make build"
+    "build": "make build",
+    "typeorm": "npx babel-node ./node_modules/.bin/typeorm"
   },
   "repository": {
     "type": "git",
