--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,19 +1,33 @@
-plugins:
-  - import
-  - jest
-  - prettier
-  # - babel
-
+---
 parser: babel-eslint
 
+plugins:
+  - react
+  - jest
+  - prettier
+  - babel
+  - react-hooks
+
 extends:
-  - airbnb-base
-  - plugin:jest/recommended
+  - airbnb
+  - eslint:recommended
+  - plugin:react/recommended
   - plugin:prettier/recommended
 
 env:
+  browser: true
   node: true
   jest: true
 
+settings:
+  import/resolver:
+    - node
+    - webpack
+
 rules:
-  no-console: 'off'
+  import/extensions: 0
+  no-console: 0
+  react/jsx-filename-extension: 0
+  react/prop-types: 0
+  react-hooks/rules-of-hooks: "error"
+  react-hooks/exhaustive-deps: "warn"
