--- a/package.json
+++ b/package.json
@@ -34,23 +34,29 @@
   },
   "homepage": "https://github.com/Romez/backend-project-lvl4#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.10.1",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "faker": "^4.1.0",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
@@ -67,14 +73,19 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
     "@sentry/node": "^5.15.5",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "class-validator": "^0.12.2",
+    "core-js": "^3.6.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.4",
     "i18next": "^19.4.3",
     "jquery": "^3.4.1",
     "jquery-ujs": "^1.2.2",
-    "koa": "^2.11.0",
+    "koa": "^2.13.0",
     "koa-404-handler": "0.0.2",
     "koa-better-error-handler": "^3.0.5",
     "koa-bodyparser": "^4.3.0",
@@ -83,14 +94,27 @@
     "koa-generic-session": "^2.0.4",
     "koa-logger": "^3.2.1",
     "koa-methodoverride": "^2.0.0",
+    "koa-pg-session": "^2.0.1",
     "koa-pug": "^4.0.3",
     "koa-router": "^8.0.7",
+    "koa-socket-2": "^1.2.0",
+    "koa-sqlite3-session": "^1.0.4",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.3.0",
     "lodash": "^4.17.15",
     "pg": "^8.0.3",
     "popper.js": "^1.16.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
+    "react-redux": "^7.2.0",
+    "react-stay-scrolled": "^7.1.0",
+    "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.5",
+    "socket.io-client": "^2.3.0",
     "typeorm": "^0.2.24",
-    "webpack": "^4.41.5"
+    "webpack": "^4.41.5",
+    "yup": "^0.29.1"
   }
 }
